--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,10 @@
     <string name="menu_info_detail_show">Tampilkan info detail</string>
     <string name="menu_info_detail_hide">Sembunyikan info detail</string>
     <string name="menu_setting_font_size">Ukuran Font</string>
+    <string name="menu_sort_by_title_asc">Menaik (A-Z)</string>
+    <string name="menu_sort_by_title_desc">Menurun (Z-A)</string>
+    <string name="menu_sort_by_date_asc">Terbaru</string>
+    <string name="menu_sort_by_date_desc">Terlama</string>
 
     <!-- Success Message -->
     <string name="success_edit_profile">Profil telah berhasil diperbarui</string>
