--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,6 +168,7 @@
     <string name="btn_add_rule">Tambah Aturan</string>
     <string name="btn_add_usage">Tambah Kegunaan</string>
     <string name="btn_add_lyrics_idn">Tambah Terjemahan Lirik</string>
+    <string name="btn_filter">Filter</string>
 
     <!-- Radio Button -->
     <string name="rb_no_cover">Jangan isi cover</string>
